layout bug

--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -252,9 +252,6 @@
             .ui, .front-end, .form, .roadmap {
                 width: 100%;
             }
-            .form {
-                height: 400px;
-            }
             .roadmap {
                 img {
                     width: 100%;
